--- a/Workshop.ipynb
+++ b/Workshop.ipynb
@@ -17,6 +17,160 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>order</th>\n",
+       "      <th>name</th>\n",
+       "      <th>height(cm)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>George Washington</td>\n",
+       "      <td>189</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>John Adams</td>\n",
+       "      <td>170</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Thomas Jefferson</td>\n",
+       "      <td>189</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>James Madison</td>\n",
+       "      <td>163</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>James Monroe</td>\n",
+       "      <td>183</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   order               name  height(cm)\n",
+       "0      1  George Washington         189\n",
+       "1      2         John Adams         170\n",
+       "2      3   Thomas Jefferson         189\n",
+       "3      4      James Madison         163\n",
+       "4      5       James Monroe         183"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Read in the dataset and look at the first rows.\n",
+    "data = pd.read_csv('data\\president_heights.csv')\n",
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The average height of a US president is 179.74 cm with a standard deviation of 6.93.\n"
+     ]
+    }
+   ],
+   "source": [
+    "heights = np.array(data['height(cm)'])\n",
+    "print(('The average height of a US president '\n",
+    "       'is {0:0.2f} cm with a standard deviation '\n",
+    "       'of {1:0.2f}.').format(np.average(heights), np.std(heights)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Abraham Lincoln, Lyndon B. Johnson'"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "max_h = max(heights)\n",
+    "min_h = min(heights)\n",
+    "tallest = ', '.join(data.name.loc[data['height(cm)'] == max_h])\n",
+    "tallest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The tallest presidents were Abraham Lincoln, Lyndon B. Johnson with a height of 193 cm.\n",
+      "The shortest presidents were James Madison with a height of 163 cm.\n"
+     ]
+    }
+   ],
+   "source": [
+    "shortest = ', '.join(data.name.loc[data['height(cm)'] == min_h])\n",
+    "print(('The tallest presidents were {} '\n",
+    "       'with a height of {} cm.').format(tallest, max_h))\n",
+    "print(('The shortest presidents were {} '\n",
+    "       'with a height of {} cm.').format(shortest, min_h))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -38,6 +192,40 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-1.3487500000000001\n",
+      "-1.3487500000000001\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "def p(a, x):\n",
+    "    # create an array merging the\n",
+    "    # coefficients and the x^n terms\n",
+    "    b = np.array([a, \n",
+    "                  np.array([x ** n for n in range(len(a))])])\n",
+    "    # reshape the array properly\n",
+    "    b.reshape(2, len(a))\n",
+    "    # take cummulative sum across columns\n",
+    "    c = np.cumprod(b, axis=0)\n",
+    "    return sum(c[1,:])\n",
+    "\n",
+    "a = np.array([-2.1, 1.3, 0.43, -0.12, 0.14])\n",
+    "print(p(a, 0.5))\n",
+    "pp = np.poly1d(a[::-1])\n",
+    "print(pp(0.5))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -48,6 +236,209 @@
     "\n",
     "\n",
     "Your result should be equal to the output of `scipy.special.softmax`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sepallength</th>\n",
+       "      <th>sepalwidth</th>\n",
+       "      <th>petallength</th>\n",
+       "      <th>petalwidth</th>\n",
+       "      <th>flower</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>5.1</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>Iris-setosa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4.9</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>Iris-setosa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4.7</td>\n",
+       "      <td>3.2</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>Iris-setosa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4.6</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>Iris-setosa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>3.6</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>Iris-setosa</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   sepallength  sepalwidth  petallength  petalwidth       flower\n",
+       "0          5.1         3.5          1.4         0.2  Iris-setosa\n",
+       "1          4.9         3.0          1.4         0.2  Iris-setosa\n",
+       "2          4.7         3.2          1.3         0.2  Iris-setosa\n",
+       "3          4.6         3.1          1.5         0.2  Iris-setosa\n",
+       "4          5.0         3.6          1.4         0.2  Iris-setosa"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Read in the dataset and look at the first rows.\n",
+    "data = pd.read_csv('data\\iris.csv')\n",
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.00221959, 0.00181724, 0.00148783, 0.00134625, 0.00200836,\n",
+       "       0.00299613, 0.00134625, 0.00200836, 0.00110221, 0.00181724,\n",
+       "       0.00299613, 0.00164431, 0.00164431, 0.00099732, 0.0044697 ,\n",
+       "       0.00404435, 0.00299613, 0.00221959, 0.00404435, 0.00221959,\n",
+       "       0.00299613, 0.00221959, 0.00134625, 0.00221959, 0.00164431,\n",
+       "       0.00200836, 0.00200836, 0.00245302, 0.00245302, 0.00148783,\n",
+       "       0.00164431, 0.00299613, 0.00245302, 0.00331123, 0.00181724,\n",
+       "       0.00200836, 0.00331123, 0.00181724, 0.00110221, 0.00221959,\n",
+       "       0.00200836, 0.00121813, 0.00110221, 0.00200836, 0.00221959,\n",
+       "       0.00164431, 0.00221959, 0.00134625, 0.00271101, 0.00200836,\n",
+       "       0.01483991, 0.00814432, 0.01342771, 0.00331123, 0.00900086,\n",
+       "       0.00404435, 0.00736928, 0.00181724, 0.00994749, 0.00245302,\n",
+       "       0.00200836, 0.00493978, 0.0054593 , 0.00603346, 0.00365948,\n",
+       "       0.01099368, 0.00365948, 0.0044697 , 0.006668  , 0.00365948,\n",
+       "       0.00493978, 0.00603346, 0.00736928, 0.00603346, 0.00814432,\n",
+       "       0.00994749, 0.01214989, 0.01099368, 0.0054593 , 0.00404435,\n",
+       "       0.00331123, 0.00331123, 0.0044697 , 0.0054593 , 0.00299613,\n",
+       "       0.0054593 , 0.01099368, 0.00736928, 0.00365948, 0.00331123,\n",
+       "       0.00331123, 0.00603346, 0.0044697 , 0.00200836, 0.00365948,\n",
+       "       0.00404435, 0.00404435, 0.006668  , 0.00221959, 0.00404435,\n",
+       "       0.00736928, 0.0044697 , 0.01640064, 0.00736928, 0.00900086,\n",
+       "       0.02704008, 0.00181724, 0.02003179, 0.01099368, 0.01812551,\n",
+       "       0.00900086, 0.00814432, 0.01214989, 0.00404435, 0.0044697 ,\n",
+       "       0.00814432, 0.00900086, 0.02988391, 0.02988391, 0.0054593 ,\n",
+       "       0.01342771, 0.00365948, 0.02988391, 0.00736928, 0.01099368,\n",
+       "       0.01812551, 0.006668  , 0.00603346, 0.00814432, 0.01812551,\n",
+       "       0.02213855, 0.0365003 , 0.00814432, 0.00736928, 0.00603346,\n",
+       "       0.02988391, 0.00736928, 0.00814432, 0.0054593 , 0.01342771,\n",
+       "       0.01099368, 0.01342771, 0.0044697 , 0.01214989, 0.01099368,\n",
+       "       0.01099368, 0.00736928, 0.00900086, 0.006668  , 0.00493978])"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sepall = np.array(data['sepallength'])\n",
+    "\n",
+    "softmax = np.exp(sepall) / sum(np.exp(sepall))\n",
+    "softmax"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.00221959, 0.00181724, 0.00148783, 0.00134625, 0.00200836,\n",
+       "       0.00299613, 0.00134625, 0.00200836, 0.00110221, 0.00181724,\n",
+       "       0.00299613, 0.00164431, 0.00164431, 0.00099732, 0.0044697 ,\n",
+       "       0.00404435, 0.00299613, 0.00221959, 0.00404435, 0.00221959,\n",
+       "       0.00299613, 0.00221959, 0.00134625, 0.00221959, 0.00164431,\n",
+       "       0.00200836, 0.00200836, 0.00245302, 0.00245302, 0.00148783,\n",
+       "       0.00164431, 0.00299613, 0.00245302, 0.00331123, 0.00181724,\n",
+       "       0.00200836, 0.00331123, 0.00181724, 0.00110221, 0.00221959,\n",
+       "       0.00200836, 0.00121813, 0.00110221, 0.00200836, 0.00221959,\n",
+       "       0.00164431, 0.00221959, 0.00134625, 0.00271101, 0.00200836,\n",
+       "       0.01483991, 0.00814432, 0.01342771, 0.00331123, 0.00900086,\n",
+       "       0.00404435, 0.00736928, 0.00181724, 0.00994749, 0.00245302,\n",
+       "       0.00200836, 0.00493978, 0.0054593 , 0.00603346, 0.00365948,\n",
+       "       0.01099368, 0.00365948, 0.0044697 , 0.006668  , 0.00365948,\n",
+       "       0.00493978, 0.00603346, 0.00736928, 0.00603346, 0.00814432,\n",
+       "       0.00994749, 0.01214989, 0.01099368, 0.0054593 , 0.00404435,\n",
+       "       0.00331123, 0.00331123, 0.0044697 , 0.0054593 , 0.00299613,\n",
+       "       0.0054593 , 0.01099368, 0.00736928, 0.00365948, 0.00331123,\n",
+       "       0.00331123, 0.00603346, 0.0044697 , 0.00200836, 0.00365948,\n",
+       "       0.00404435, 0.00404435, 0.006668  , 0.00221959, 0.00404435,\n",
+       "       0.00736928, 0.0044697 , 0.01640064, 0.00736928, 0.00900086,\n",
+       "       0.02704008, 0.00181724, 0.02003179, 0.01099368, 0.01812551,\n",
+       "       0.00900086, 0.00814432, 0.01214989, 0.00404435, 0.0044697 ,\n",
+       "       0.00814432, 0.00900086, 0.02988391, 0.02988391, 0.0054593 ,\n",
+       "       0.01342771, 0.00365948, 0.02988391, 0.00736928, 0.01099368,\n",
+       "       0.01812551, 0.006668  , 0.00603346, 0.00814432, 0.01812551,\n",
+       "       0.02213855, 0.0365003 , 0.00814432, 0.00736928, 0.00603346,\n",
+       "       0.02988391, 0.00736928, 0.00814432, 0.0054593 , 0.01342771,\n",
+       "       0.01099368, 0.01342771, 0.0044697 , 0.01214989, 0.01099368,\n",
+       "       0.01099368, 0.00736928, 0.00900086, 0.006668  , 0.00493978])"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import scipy\n",
+    "scipy.special.softmax(sepall)"
    ]
   },
   {
@@ -82,6 +473,79 @@
     "```\n",
     "Output contains 10 columns representing numbers from 1 to 10. The values are the counts of the numbers in the respective rows.\n",
     "For example, Cell(0,2) has the value 2, which means, the number 3 occurs exactly 2 times in the 1st row."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 9,  9,  4,  8,  8,  1,  5,  3,  6,  3],\n",
+       "       [ 3,  3,  2,  1,  9,  5,  1, 10,  7,  3],\n",
+       "       [ 5,  2,  6,  4,  5,  5,  4,  8,  2,  2],\n",
+       "       [ 8,  8,  1,  3, 10, 10,  4,  3,  6,  9],\n",
+       "       [ 2,  1,  8,  7,  3,  1,  9,  3,  6,  2],\n",
+       "       [ 9,  2,  6,  5,  3,  9,  4,  6,  1, 10]])"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "np.random.seed(100)\n",
+    "arr = np.random.randint(1,11,size=(6, 10))\n",
+    "arr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10 10 10 10 10 10]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 0, 2, 1, 1, 1, 0, 2, 2, 0],\n",
+       "       [2, 1, 3, 0, 1, 0, 1, 0, 1, 1],\n",
+       "       [0, 3, 0, 2, 3, 1, 0, 1, 0, 0],\n",
+       "       [1, 0, 2, 1, 0, 1, 0, 2, 1, 2],\n",
+       "       [2, 2, 2, 0, 0, 1, 1, 1, 1, 0],\n",
+       "       [1, 1, 1, 1, 1, 2, 0, 0, 2, 1]])"
+      ]
+     },
+     "execution_count": 117,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# create array from 1 to 10\n",
+    "tst = np.arange(1,11)\n",
+    "# create an array of size equal to arr\n",
+    "res = np.zeros_like(arr)\n",
+    "for i in tst:\n",
+    "    # for each number, find matches in arr\n",
+    "    fnd =  np.where(arr == i, 1, 0)\n",
+    "    # equate the sums per row with the \n",
+    "    # required answer per column\n",
+    "    res[:,i-1] = np.sum(fnd, axis=1)\n",
+    "# quick check: should have sum of 10 per row\n",
+    "print(np.sum(res, axis=1))\n",
+    "res"
    ]
   },
   {
@@ -233,7 +697,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4-final"
+   "version": "3.8.3"
   },
   "next_doc": {
    "link": "matplotlib",
