--- a/Workshop.ipynb
+++ b/Workshop.ipynb
@@ -17,6 +17,34 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "179.73809523809524\n6.931843442745892\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas\n",
+    "import numpy as np\n",
+    "\n",
+    "df = pandas.read_csv('data/president_heights.csv')\n",
+    "\n",
+    "height_list = df['height(cm)'].to_numpy()\n",
+    "\n",
+    "mean_height = np.mean(height_list)\n",
+    "std_height = np.std(height_list)\n",
+    "\n",
+    "print(mean_height)\n",
+    "print(std_height)\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -34,7 +62,49 @@
     "\n",
     "(This is already implemented in `np.poly1d`, but use that only to test your function)\n",
     "\n",
-    "- Hint: Use `np.cumprod()`  \n"
+    "- Hint: Use `np.cumprod()`  \n",
+    "\n",
+    "```\n",
+    "p(5, [1, 1]) = 1 + 5 = 6\n",
+    "p(5, [2, 1, 1]) = 2 + 5 + 25 = 31\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "6.0\n31.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "def p(x, coeff: np.array):\n",
+    "    \"\"\" returns the result of a polynomial\n",
+    "    :param x: value in given a point x\n",
+    "    :param coeff: Numpy array of numbers\n",
+    "    :returns: results of polynomial\n",
+    "    \"\"\"\n",
+    "    # grab a 0\n",
+    "    total = coeff[0]**0\n",
+    "    # remove first item\n",
+    "    coeff_to_calc = np.delete(coeff, 0)\n",
+    "    # prepare arrays to calc powers\n",
+    "    constant_list = np.ones(coeff.size - 1)*5\n",
+    "    powers = np.delete(np.arange(0, coeff.size ), 0)\n",
+    "    # return final \n",
+    "    return total + np.power(constant_list, powers).sum()\n",
+    "    \n",
+    "\n",
+    "print(p(5, np.array([1, 1])))\n",
+    "print(p(5, np.array([2, 1, 1])))"
    ]
   },
   {
@@ -48,6 +118,36 @@
     "\n",
     "\n",
     "Your result should be equal to the output of `scipy.special.softmax`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[0.00221959 0.00181724 0.00148783 0.00134625 0.00200836 0.00299613\n 0.00134625 0.00200836 0.00110221 0.00181724 0.00299613 0.00164431\n 0.00164431 0.00099732 0.0044697  0.00404435 0.00299613 0.00221959\n 0.00404435 0.00221959 0.00299613 0.00221959 0.00134625 0.00221959\n 0.00164431 0.00200836 0.00200836 0.00245302 0.00245302 0.00148783\n 0.00164431 0.00299613 0.00245302 0.00331123 0.00181724 0.00200836\n 0.00331123 0.00181724 0.00110221 0.00221959 0.00200836 0.00121813\n 0.00110221 0.00200836 0.00221959 0.00164431 0.00221959 0.00134625\n 0.00271101 0.00200836 0.01483991 0.00814432 0.01342771 0.00331123\n 0.00900086 0.00404435 0.00736928 0.00181724 0.00994749 0.00245302\n 0.00200836 0.00493978 0.0054593  0.00603346 0.00365948 0.01099368\n 0.00365948 0.0044697  0.006668   0.00365948 0.00493978 0.00603346\n 0.00736928 0.00603346 0.00814432 0.00994749 0.01214989 0.01099368\n 0.0054593  0.00404435 0.00331123 0.00331123 0.0044697  0.0054593\n 0.00299613 0.0054593  0.01099368 0.00736928 0.00365948 0.00331123\n 0.00331123 0.00603346 0.0044697  0.00200836 0.00365948 0.00404435\n 0.00404435 0.006668   0.00221959 0.00404435 0.00736928 0.0044697\n 0.01640064 0.00736928 0.00900086 0.02704008 0.00181724 0.02003179\n 0.01099368 0.01812551 0.00900086 0.00814432 0.01214989 0.00404435\n 0.0044697  0.00814432 0.00900086 0.02988391 0.02988391 0.0054593\n 0.01342771 0.00365948 0.02988391 0.00736928 0.01099368 0.01812551\n 0.006668   0.00603346 0.00814432 0.01812551 0.02213855 0.0365003\n 0.00814432 0.00736928 0.00603346 0.02988391 0.00736928 0.00814432\n 0.0054593  0.01342771 0.01099368 0.01342771 0.0044697  0.01214989\n 0.01099368 0.01099368 0.00736928 0.00900086 0.006668   0.00493978]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "def get_softMax():\n",
+    "    df = pd.read_csv('data/iris.csv')\n",
+    "\n",
+    "    logits = df['sepallength'].to_numpy()\n",
+    "\n",
+    "    exponants = np.array([np.exp(logit) for logit in logits])\n",
+    "    exponants_sum = exponants.sum()\n",
+    "\n",
+    "    return np.array([softmax/exponants_sum for softmax in exponants])\n",
+    "\n",
+    "print(get_softMax())"
    ]
   },
   {
@@ -85,6 +185,36 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[[ 9  9  4  8  8  1  5  3  6  3]\n [ 3  3  2  1  9  5  1 10  7  3]\n [ 5  2  6  4  5  5  4  8  2  2]\n [ 8  8  1  3 10 10  4  3  6  9]\n [ 2  1  8  7  3  1  9  3  6  2]\n [ 9  2  6  5  3  9  4  6  1 10]]\n[[2 1 1 1 1 2 1 3 3 2]\n [1 1 1 1 1 2 1 1 1 2]\n [1 2 2 1 1 2 3 1 1 2]\n [1 1 1 1 1 1 3 3 3 1]\n [1 1 1 1 2 2 1 3 3 2]\n [2 2 2 1 2 1 3 1 1 1]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import Counter\n",
+    "import numpy as np\n",
+    "\n",
+    "np.random.seed(100)\n",
+    "arr = np.random.randint(1,11,size=(6, 10))\n",
+    "\n",
+    "def find_uniques(int_list):\n",
+    "    counted = Counter(int_list)\n",
+    "    return np.array([counted[i] for i in int_list])\n",
+    "\n",
+    "uniques = lambda int_lists: np.apply_along_axis(find_uniques, 0, int_lists)\n",
+    "\n",
+    "print(arr)\n",
+    "print(uniques(arr))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -108,6 +238,39 @@
     "#>        [ 0.,  1.,  0.],\n",
     "#>        [ 1.,  0.,  0.]])\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[[0. 1. 0.]\n [0. 0. 1.]\n [0. 1. 0.]\n [0. 1. 0.]\n [0. 1. 0.]\n [1. 0. 0.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import Counter\n",
+    "import numpy as np\n",
+    "\n",
+    "START = 1\n",
+    "STOP = 4\n",
+    "np.random.seed(101) \n",
+    "arr = np.random.randint(START,STOP, size=6)\n",
+    "\n",
+    "def get_one_hot_array(x):\n",
+    "    zeros = np.zeros(STOP-START)\n",
+    "    zeros[x-1] = 1\n",
+    "    return zeros\n",
+    "\n",
+    "one_hot_matrix = lambda int_list: np.array([get_one_hot_array(i) for i in int_list])\n",
+    "\n",
+    "\n",
+    "print(one_hot_matrix(arr))"
    ]
   },
   {
@@ -191,7 +354,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 1\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -233,7 +398,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4-final"
+   "version": "3.8.3-final"
   },
   "next_doc": {
    "link": "matplotlib",
