--- a/Workshop.ipynb
+++ b/Workshop.ipynb
@@ -490,7 +490,10 @@
     "\n",
     "# initialize the results array with only zeros.\n",
     "res = np.zeros((len(arr), 3))\n",
-    "# use fancy indexing to set correct values to\n",
+    "# use fancy indexing to set correct values\n",
+    "# i.e.   res[0, 2-1] = 1\n",
+    "#        res[1, 3-1] = 1\n",
+    "#        res[2, 2-1] = 1 ... and so on.\n",
     "res[np.array(list(range(len(arr)))), arr-1] = 1\n",
     "res"
    ]
@@ -758,7 +761,7 @@
     "\n",
     "print(f\"b(left shift) : \\t{b}\")\n",
     "print(f\"a(original) : \\t\\t{a}\")\n",
-    "print(f\"b(right shift) : \\t{c}\")\n",
+    "print(f\"c(right shift) : \\t{c}\")\n",
     "print(f\"solution: \\t\\t{res}\")"
    ]
   },
