--- a/Workshop.ipynb
+++ b/Workshop.ipynb
@@ -736,14 +736,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "b(left shift) : \t[3 7 1 2 6 0 1 1]\na(original) : \t\t[1 3 7 1 2 6 0 1]\nb(right shift) : \t[1 1 3 7 1 2 6 0]\nsolution: \t\t[2 5]\n"
+      "b(left shift) : \t[3 7 1 2 6 0 1 1]\na(original) : \t\t[1 3 7 1 2 6 0 1]\nc(right shift) : \t[1 1 3 7 1 2 6 0]\nsolution: \t\t[2 5]\n"
      ]
     }
    ],
@@ -751,6 +751,8 @@
     "\"\"\"\n",
     "Solution using Numpy functionality\n",
     "\"\"\"\n",
+    "import numpy as np\n",
+    "\n",
     "a = np.array([1, 3, 7, 1, 2, 6, 0, 1])\n",
     "\n",
     "# shift to the left ...\n",
@@ -758,6 +760,9 @@
     "# shift to the right ...\n",
     "c = np.roll(a, 1)\n",
     "res = np.intersect1d(np.where(b < a), np.where(c < a))\n",
+    "# remove the first and last places\n",
+    "# from consideration if present\n",
+    "res = np.setdiff1d(res, np.array([0, len(a)-1]))\n",
     "\n",
     "print(f\"b(left shift) : \\t{b}\")\n",
     "print(f\"a(original) : \\t\\t{a}\")\n",
