--- a/Workshop.ipynb
+++ b/Workshop.ipynb
@@ -327,6 +327,50 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 243,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "[1, 3, 3, 0, 1]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 243
+    }
+   ],
+   "source": [
+    "from random import uniform\n",
+    "import numpy as np\n",
+    "\n",
+    "# def sample(q):\n",
+    "#     a = 0.0\n",
+    "#     U = uniform(0, 1)\n",
+    "#     for i in range(len(q)):\n",
+    "#         print(a, U, q[i])\n",
+    "#         if a < U <= a + q[i]:\n",
+    "#             return i\n",
+    "#         a = a + q[i]\n",
+    "# sample([0.25,0.75])\n",
+    "\n",
+    "class DiscreteRV:\n",
+    "    def __init__(self, q):\n",
+    "        self.q = np.array(q)\n",
+    "        if(self.q.cumsum()[-1] != 1):\n",
+    "            raise Exception('q.sum must be 1 otherwise not valid')\n",
+    "\n",
+    "    def draw(self, k):\n",
+    "        return [np.searchsorted(self.q, uniform(0, 1)) for i in range(k)]\n",
+    "\n",
+    "    \n",
+    "DiscreteRV([0.25,0.5, 0.25]).draw(5)\n",
+    "    "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -351,26 +395,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 168,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "[7, 6]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 168
+    }
+   ],
    "source": [
-    "# 1\n"
+    "# 1\n",
+    "def peaks(array):\n",
+    "    not_edges = lambda x : x is not 0 and x is not len(array) -1\n",
+    "    is_peak = lambda a,b,c : array[a] > array[b] and array[a] > array[c]\n",
+    "    return [array[i] for i in range(len(array)) if not_edges(i) and is_peak(i, i -1, i + 1)]\n",
+    "\n",
+    "peaks([1, 3, 7, 1, 2, 6, 0, 1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 193,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([7, 6])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 193
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "def strided_app(a, L, S ): \n",
+    "    nrows = ((a.size-L)//S)+1\n",
+    "    n = a.strides[0]\n",
+    "    return np.lib.stride_tricks.as_strided(a, shape=(nrows,L), strides=(S*n,n))\n",
+    "\n",
+    "check_if_peak = lambda x: x[1] if x[1] > x[0] and x[1] > x[2] else 0\n",
+    "\n",
+    "def numpy_peaks(array):\n",
+    "    result = np.apply_along_axis(check_if_peak, 1, strided_app(array, 3, 1))\n",
+    "    return result[result.nonzero()] \n",
+    "\n",
+    "numpy_peaks(np.array([1, 3, 7, 1, 2, 6, 0, 1]))"
+   ]
   },
   {
    "cell_type": "code",
