--- a/Workshop.ipynb
+++ b/Workshop.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "source": [
+    "## Martin Dionne"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -14,6 +21,35 @@
     "Find the mean height, the standard deviation of height, and the president who is the smallest and tallest.\n",
     "\n",
     "You can use `pandas` to read in the file if you want, then cast the column to a `np.array`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Average height is 179.7 with a 6.93 std deviation.\n\nThe smallest president is James Madison\nThe tallest president are Abraham Lincoln and Lyndon B. Johnson\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "df = pd.read_csv('data/president_heights.csv')\n",
+    "arr = np.array(df['height(cm)'])\n",
+    "print(f'Average height is {round(arr.mean(),1)} with a {round(arr.std(),2)} std deviation.')\n",
+    "\n",
+    "min_h = arr.argmin()\n",
+    "max_h = np.where(arr == arr.max())\n",
+    "\n",
+    "print('')\n",
+    "print(f\"The smallest president is {df['name'][min_h]}\")\n",
+    "print(f\"The tallest president are {df['name'][max_h[0][0]]} and {df['name'][max_h[0][1]]}\")\n"
    ]
   },
   {
@@ -38,6 +74,32 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "38\n38\n"
+     ]
+    }
+   ],
+   "source": [
+    "def p(x, coeff):\n",
+    "    coeff = np.array(coeff)\n",
+    "    exp = np.flip(np.arange(0, coeff.size)) # [2, 1, 0]\n",
+    "    y = ((x ** exp) * coeff).sum() \n",
+    "    return y\n",
+    "\n",
+    "print(p(5,[1,2,3]))\n",
+    "\n",
+    "poly = np.poly1d([1,2,3])\n",
+    "print(poly(5))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -48,6 +110,34 @@
     "\n",
     "\n",
     "Your result should be equal to the output of `scipy.special.softmax`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[ True  True  True  True  True  True  True  True  True  True  True  True\n  True  True  True  True  True  True  True  True  True  True  True  True\n  True  True  True  True  True  True  True  True  True  True  True  True\n  True  True  True  True  True  True  True  True  True  True  True  True\n  True  True  True  True  True  True  True  True  True  True  True  True\n  True  True  True  True  True  True  True  True  True  True  True  True\n  True  True  True  True  True  True  True  True  True  True  True  True\n  True  True  True  True  True  True  True  True  True  True  True  True\n  True  True  True  True  True  True  True  True  True  True  True  True\n  True  True  True  True  True  True  True  True  True  True  True  True\n  True  True  True  True  True  True  True  True  True  True  True  True\n  True  True  True  True  True  True  True  True  True  True  True  True\n  True  True  True  True  True  True]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "import scipy\n",
+    "from scipy.special import softmax\n",
+    "\n",
+    "df = pd.read_csv('data/iris.csv')\n",
+    "sl = np.array(df['sepallength'])\n",
+    "# np.exp(x) is faster than np.e ** x\n",
+    "softmax = np.exp(sl) / np.sum(np.exp(sl)) \n",
+    "#print(softmax)\n",
+    "\n",
+    "# must round, can't compare floats as is\n",
+    "print(scipy.special.softmax(sl).round(5) == softmax.round(5))"
    ]
   },
   {
@@ -85,6 +175,40 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 311,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([[1, 0, 2, 1, 1, 1, 0, 2, 2, 0],\n",
+       "       [2, 1, 3, 0, 1, 0, 1, 0, 1, 1],\n",
+       "       [0, 3, 0, 2, 3, 1, 0, 1, 0, 0],\n",
+       "       [1, 0, 2, 1, 0, 1, 0, 2, 1, 2],\n",
+       "       [2, 2, 2, 0, 0, 1, 1, 1, 1, 0],\n",
+       "       [1, 1, 1, 1, 1, 2, 0, 0, 2, 1]])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 311
+    }
+   ],
+   "source": [
+    "np.random.seed(100)\n",
+    "arr = np.random.randint(1,11,size=(6, 10))\n",
+    "\n",
+    "def count_by_row(arr):\n",
+    "    cbr = np.empty(np.shape(arr), dtype=int)\n",
+    "    for i in range(0,arr.max()):\n",
+    "        cbr[:,i]  = np.count_nonzero(arr == i+1, axis=1)\n",
+    "    return cbr\n",
+    "\n",
+    "count_by_row(arr)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -108,6 +232,88 @@
     "#>        [ 0.,  1.,  0.],\n",
     "#>        [ 1.,  0.,  0.]])\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 308,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[2 3 2 2 2 1]\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([[0., 1., 0.],\n",
+       "       [0., 0., 1.],\n",
+       "       [0., 1., 0.],\n",
+       "       [0., 1., 0.],\n",
+       "       [0., 1., 0.],\n",
+       "       [1., 0., 0.]])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 308
+    }
+   ],
+   "source": [
+    "np.random.seed(101) \n",
+    "arr = np.random.randint(1,4, size=6)\n",
+    "arr\n",
+    "\n",
+    "#generalize case\n",
+    "def one_hot(arr):\n",
+    "    oh = np.zeros((len(arr), arr.max()), dtype=float)\n",
+    "    for i in range(len(arr)):\n",
+    "        oh[i,arr[i]-1] = 1\n",
+    "    return oh\n",
+    "\n",
+    "print(arr)\n",
+    "one_hot(arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 309,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[2 7 8 9 5 9 6 1]\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([[0., 1., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 1., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 0., 1., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 0., 0., 1.],\n",
+       "       [0., 0., 0., 0., 1., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 0., 0., 1.],\n",
+       "       [0., 0., 0., 0., 0., 1., 0., 0., 0.],\n",
+       "       [1., 0., 0., 0., 0., 0., 0., 0., 0.]])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 309
+    }
+   ],
+   "source": [
+    "np.random.seed(101)\n",
+    "arr2 = np.random.randint(1,10, size=8)\n",
+    "\n",
+    "print(arr2)\n",
+    "one_hot(arr2)"
    ]
   },
   {
@@ -164,6 +370,47 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "[2, 0, 1, 0, 1, 1, 0, 0, 1, 2]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 76
+    }
+   ],
+   "source": [
+    "from random import uniform\n",
+    "\n",
+    "class DiscreteRV():\n",
+    "    def __init__(self, q):\n",
+    "        self.q = np.array(q)\n",
+    "        if sum(self.q) != 1:\n",
+    "            raise ValueError (\"q != 1\")\n",
+    "\n",
+    "    def draw(self, k=1):\n",
+    "        # I know... avoid loops\n",
+    "        return [np.searchsorted(self.q, uniform(0, 1)) for _ in range(k)]\n",
+    "\n",
+    "\n",
+    "drv = DiscreteRV([0.25, 0.75])\n",
+    "drv.draw(10)\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -188,24 +435,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 395,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[2, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def peaks(arr):\n",
+    "    p = []\n",
+    "    for i in range(len(arr)-1):\n",
+    "        if arr[i-1] < arr[i] > arr[i+1]:\n",
+    "            p.append(i)\n",
+    "    return p\n",
+    "\n",
+    "arr = [1, 3, 7, 1, 2, 6, 0, 1]\n",
+    "print(peaks(arr))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "(array([2, 5], dtype=int64),)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# doesn't work for all cases\n",
+    "def np_peaks(arr):\n",
+    "    d = np.diff(arr) \n",
+    "    s = np.sign(d)\n",
+    "    return np.where(s == s.min())\n",
+    "\n",
+    "arr = np.array([1, 3, 7, 1, 2, 6, 0, 1])\n",
+    "print(np_peaks(arr))"
+   ]
   },
   {
    "cell_type": "code",
@@ -233,7 +510,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4-final"
+   "version": "3.8.3-final"
   },
   "next_doc": {
    "link": "matplotlib",
