--- a/Workshop.ipynb
+++ b/Workshop.ipynb
@@ -25,31 +25,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 124,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Average height is 179.7 with a 6.93 std deviation.\n\nThe smallest president is James Madison\nThe tallest president are Abraham Lincoln and Lyndon B. Johnson\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
     "df = pd.read_csv('data/president_heights.csv')\n",
     "arr = np.array(df['height(cm)'])\n",
-    "print(f'Average height is {round(arr.mean(),1)} with a {round(arr.std(),2)} std deviation.')\n",
     "\n",
     "min_h = arr.argmin()\n",
-    "max_h = np.where(arr == arr.max())\n",
-    "\n",
+    "max_h = np.where(arr == arr.max())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Average height is 179.7 with a 6.93 standard deviation.\n\nThe smallest president is James Madison\nThe tallest presidents are Abraham Lincoln and Lyndon B. Johnson\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'Average height is {round(arr.mean(),1)} with a {round(arr.std(),2)} standard deviation.')\n",
     "print('')\n",
     "print(f\"The smallest president is {df['name'][min_h]}\")\n",
-    "print(f\"The tallest president are {df['name'][max_h[0][0]]} and {df['name'][max_h[0][1]]}\")\n"
+    "print(f\"The tallest presidents are {df['name'][max_h[0][0]]} and {df['name'][max_h[0][1]]}\")"
    ]
   },
   {
@@ -75,7 +82,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def p(x, coeff):\n",
+    "    coeff = np.array(coeff)\n",
+    "    exp = np.flip(np.arange(0, coeff.size)) # [2, 1, 0]\n",
+    "    y = ((x ** exp) * coeff).sum() \n",
+    "    return y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -87,12 +107,6 @@
     }
    ],
    "source": [
-    "def p(x, coeff):\n",
-    "    coeff = np.array(coeff)\n",
-    "    exp = np.flip(np.arange(0, coeff.size)) # [2, 1, 0]\n",
-    "    y = ((x ** exp) * coeff).sum() \n",
-    "    return y\n",
-    "\n",
     "print(p(5,[1,2,3]))\n",
     "\n",
     "poly = np.poly1d([1,2,3])\n",
@@ -114,7 +128,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "import scipy\n",
+    "from scipy.special import softmax\n",
+    "\n",
+    "df = pd.read_csv('data/iris.csv')\n",
+    "sl = np.array(df['sepallength'])\n",
+    "# np.exp(x) is faster than np.e ** x\n",
+    "softmax = np.exp(sl) / np.sum(np.exp(sl)) \n",
+    "#print(softmax)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -126,16 +157,6 @@
     }
    ],
    "source": [
-    "\n",
-    "import scipy\n",
-    "from scipy.special import softmax\n",
-    "\n",
-    "df = pd.read_csv('data/iris.csv')\n",
-    "sl = np.array(df['sepallength'])\n",
-    "# np.exp(x) is faster than np.e ** x\n",
-    "softmax = np.exp(sl) / np.sum(np.exp(sl)) \n",
-    "#print(softmax)\n",
-    "\n",
     "# must round, can't compare floats as is\n",
     "print(scipy.special.softmax(sl).round(5) == softmax.round(5))"
    ]
@@ -176,7 +197,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 311,
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.random.seed(100)\n",
+    "arr = np.random.randint(1,11,size=(6, 10))\n",
+    "\n",
+    "def count_by_row(arr):\n",
+    "    cbr = np.empty(np.shape(arr), dtype=int)\n",
+    "    for i in range(0,arr.max()):\n",
+    "        cbr[:,i]  = np.count_nonzero(arr == i+1, axis=1)\n",
+    "    return cbr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -192,19 +229,10 @@
       ]
      },
      "metadata": {},
-     "execution_count": 311
+     "execution_count": 115
     }
    ],
    "source": [
-    "np.random.seed(100)\n",
-    "arr = np.random.randint(1,11,size=(6, 10))\n",
-    "\n",
-    "def count_by_row(arr):\n",
-    "    cbr = np.empty(np.shape(arr), dtype=int)\n",
-    "    for i in range(0,arr.max()):\n",
-    "        cbr[:,i]  = np.count_nonzero(arr == i+1, axis=1)\n",
-    "    return cbr\n",
-    "\n",
     "count_by_row(arr)"
    ]
   },
@@ -236,7 +264,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 308,
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.random.seed(101) \n",
+    "arr = np.random.randint(1,4, size=6)\n",
+    "arr\n",
+    "\n",
+    "#generalize case\n",
+    "def one_hot(arr):\n",
+    "    oh = np.zeros((len(arr), arr.max()), dtype=float)\n",
+    "    for i in range(len(arr)):\n",
+    "        oh[i,arr[i]-1] = 1\n",
+    "    return oh"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -259,28 +305,17 @@
       ]
      },
      "metadata": {},
-     "execution_count": 308
+     "execution_count": 113
     }
    ],
    "source": [
-    "np.random.seed(101) \n",
-    "arr = np.random.randint(1,4, size=6)\n",
-    "arr\n",
-    "\n",
-    "#generalize case\n",
-    "def one_hot(arr):\n",
-    "    oh = np.zeros((len(arr), arr.max()), dtype=float)\n",
-    "    for i in range(len(arr)):\n",
-    "        oh[i,arr[i]-1] = 1\n",
-    "    return oh\n",
-    "\n",
     "print(arr)\n",
     "one_hot(arr)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 309,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +340,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 309
+     "execution_count": 7
     }
    ],
    "source": [
@@ -371,43 +406,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from random import uniform\n",
+    "\n",
+    "class DiscreteRV():\n",
+    "    def __init__(self, q=[1]):\n",
+    "        self.q = np.array(q)\n",
+    "        if self.q.sum() != 1:\n",
+    "            raise ValueError (\"q != 1\")\n",
+    "\n",
+    "    def draw(self, k=1):\n",
+    "        # I know... avoid loops\n",
+    "        return [np.searchsorted(self.q, uniform(0, 1)) for _ in range(k)]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "[2, 0, 1, 0, 1, 1, 0, 0, 1, 2]"
+       "[1, 1, 1, 2, 1, 2, 0, 1, 1, 0]"
       ]
      },
      "metadata": {},
-     "execution_count": 76
+     "execution_count": 110
     }
    ],
    "source": [
-    "from random import uniform\n",
-    "\n",
-    "class DiscreteRV():\n",
-    "    def __init__(self, q):\n",
-    "        self.q = np.array(q)\n",
-    "        if sum(self.q) != 1:\n",
-    "            raise ValueError (\"q != 1\")\n",
-    "\n",
-    "    def draw(self, k=1):\n",
-    "        # I know... avoid loops\n",
-    "        return [np.searchsorted(self.q, uniform(0, 1)) for _ in range(k)]\n",
-    "\n",
-    "\n",
     "drv = DiscreteRV([0.25, 0.75])\n",
-    "drv.draw(10)\n"
+    "drv.draw(10)"
    ]
   },
   {
@@ -435,7 +469,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 395,
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def peaks(arr):\n",
+    "    p = []\n",
+    "    for i in range(len(arr)-1):\n",
+    "        if arr[i-1] < a[i] > arr[i+1]:\n",
+    "            p.append(i)\n",
+    "    return p"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -447,12 +495,6 @@
     }
    ],
    "source": [
-    "def peaks(arr):\n",
-    "    p = []\n",
-    "    for i in range(len(arr)-1):\n",
-    "        if arr[i-1] < arr[i] > arr[i+1]:\n",
-    "            p.append(i)\n",
-    "    return p\n",
     "\n",
     "arr = [1, 3, 7, 1, 2, 6, 0, 1]\n",
     "print(peaks(arr))"
@@ -460,7 +502,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "def np_peaks(arr):\n",
+    "    arr0 = np.roll(arr,-1)\n",
+    "    arr2 = np.roll(arr,1)\n",
+    "    #np.piecewise(a, (arr0 < arr) & (arr > arr2), [True, False])\n",
+    "    return np.where( (arr0 < arr) & (arr > arr2) )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "(array([2, 5], dtype=int64),)\n(array([2, 6], dtype=int64),)\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = np.array([1, 3, 7, 1, 2, 6, 0, 1]) \n",
+    "print(np_peaks(arr))\n",
+    "\n",
+    "arr = np.array([1, 3, 7, 4, 1, 2, 6, 0, 1])\n",
+    "print(np_peaks(arr))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#initial solution: doesn't work for all cases\n",
+    "def np_peaks_old(arr):\n",
+    "    d = np.diff(arr) \n",
+    "    s = np.sign(d)\n",
+    "    return np.where(s == s.min())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -472,16 +563,8 @@
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "\n",
-    "# doesn't work for all cases\n",
-    "def np_peaks(arr):\n",
-    "    d = np.diff(arr) \n",
-    "    s = np.sign(d)\n",
-    "    return np.where(s == s.min())\n",
-    "\n",
     "arr = np.array([1, 3, 7, 1, 2, 6, 0, 1])\n",
-    "print(np_peaks(arr))"
+    "print(np_peaks_old(arr))"
    ]
   },
   {
