Steven final edits

--- a/m1-6-numpy-main/Workshop.ipynb
+++ b/m1-6-numpy-main/Workshop.ipynb
@@ -520,22 +520,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 889,
+   "execution_count": 915,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2"
+       "array([2, 2, 2, 1, 2, 1, 1, 1, 2, 2, 0, 2, 2])"
       ]
      },
-     "execution_count": 889,
+     "execution_count": 915,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from random import uniform\n",
+    "import numpy as np\n",
+    "from numpy.random import uniform\n",
     "\n",
     "class DiscreetRV:\n",
     "    \n",
@@ -547,11 +548,12 @@
     "        \n",
     "    def draw(self, k=1):\n",
     "        \"\"\"Represents k number of draws. Default is 1\"\"\"\n",
-    "        rand = uniform(0, 1)\n",
-    "        return np.searchsorted(self.Q, rand)        \n",
+    "        rand = uniform(0, 1, size=k) #size k depends on number of draws. Default is 1\n",
+    "        x = np.searchsorted(self.Q, rand)\n",
+    "        return x       \n",
     "        \n",
     "dr = DiscreetRV([.25,.25, .5])    \n",
-    "dr.draw()"
+    "dr.draw(13)"
    ]
   },
   {
