--- a/Workshop.ipynb
+++ b/Workshop.ipynb
@@ -17,6 +17,21 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "df = pd.read_csv(r'C:\\Users\\David\\Documents\\code\\m1-6-numpy\\data\\president_heights.csv')\n",
+    "pres_height = np.asarray( df['height(cm)'] )\n",
+    "\n",
+    "np.mean(pres_height)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -38,6 +53,21 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def p(x, coeff):\n",
+    "    a = np.arange(len(coeff))\n",
+    "    b = x**a\n",
+    "    b[0] = coeff[0]\n",
+    "    print(b, \", Total:\", sum(b))\n",
+    "\n",
+    "p(5, [2, 1, 1])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -48,6 +78,25 @@
     "\n",
     "\n",
     "Your result should be equal to the output of `scipy.special.softmax`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import scipy\n",
+    "\n",
+    "df = pd.read_csv(r'C:\\Users\\David\\Documents\\code\\m1-6-numpy\\data\\iris.csv')\n",
+    "sepal_array = np.asarray( df['sepallength'] )\n",
+    "\n",
+    "\n",
+    "sepal_softmax =  np.exp(sepal_array) / np.sum(np.exp(sepal_array))\n",
+    "\n",
+    "print( sepal_softmax[:5] )\n",
+    "\n",
+    "print( scipy.special.softmax(sepal_array)[:5] )\n"
    ]
   },
   {
@@ -85,6 +134,35 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 197,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[[1 0 2 1 1 1 0 2 2 0]\n [2 1 3 0 1 0 1 0 1 1]\n [0 3 0 2 3 1 0 1 0 0]\n [1 0 2 1 0 1 0 2 1 2]\n [2 2 2 0 0 1 1 1 1 0]\n [1 1 1 1 1 2 0 0 2 1]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "np.random.seed(100)\n",
+    "arr = np.random.randint(1,11,size=(6, 10))\n",
+    "\n",
+    "arr_split = np.vsplit(arr, 6)\n",
+    "\n",
+    "filler_ = np.zeros_like(arr)\n",
+    "filler = np.vsplit(filler_, 6)\n",
+    "\n",
+    "for i in range(len(arr)):\n",
+    "        uniques, counts = np.unique(arr[i], return_counts=True)\n",
+    "        filler_[i, uniques-1] = counts\n",
+    "\n",
+    "print(filler_)\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -108,6 +186,23 @@
     "#>        [ 0.,  1.,  0.],\n",
     "#>        [ 1.,  0.,  0.]])\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.random.seed(101) \n",
+    "arr = np.random.randint(1,4, size=6)\n",
+    "arr\n",
+    "\n",
+    "shape = (arr.size, arr.max()+1)\n",
+    "hot_wings = np.zeros(shape)\n",
+    "rows = np.arange(arr.size)\n",
+    "hot_wings[rows, arr] = 1\n",
+    "print(hot_wings)"
    ]
   },
   {
@@ -164,6 +259,33 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 362,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 362
+    }
+   ],
+   "source": [
+    "from numpy.random import uniform\n",
+    "\n",
+    "def sample(q):\n",
+    "        U = uniform(0,1)\n",
+    "        return np.searchsorted(q, U)\n",
+    "        \n",
+    "\n",
+    "sample([0.50, 0.25, 0.25])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -191,28 +313,41 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#1. Solve this usign a regular python for loop\n",
+    "\n",
+    "def Peaks(a):\n",
+    "    index_gen = range(len(a))\n",
+    "    peaky_points = []\n",
+    "    for ind in index_gen:\n",
+    "        if ind == 0:\n",
+    "            if a[ind] >= a[ind+1]:\n",
+    "                peaky_points.append(ind)\n",
+    "            else:\n",
+    "                pass\n",
+    "        if ind != 0 and ind != len(a)-1:\n",
+    "            if a[ind] >= a[ind-1] and a[ind] >= a[ind+1]:\n",
+    "                peaky_points.append(ind)\n",
+    "            else:\n",
+    "                pass\n",
+    "        if ind == len(a):\n",
+    "            if a[ind] >= a[ind-1]:\n",
+    "                peaky_points.append(ind)\n",
+    "        print(peaky_points)\n",
+    "\n",
+    "a = np.array([1, 3, 7, 1, 2, 6, 0, 1])\n",
+    "\n",
+    "Peaks(a)\n",
+    "\n",
+    "#2. Solve this using no loops and only numpy functions\n",
+    "\n",
+    "one_side = np.where(a[1:] < a[:-1], 1, 0)\n",
+    "two_side = np.where(a[1:] < a[:+1], 1, 0)\n",
+    "\n",
+    "peaks_are_2s = np.add(one_side, two_side)\n",
+    "\n",
+    "np.argwhere(peaks_are_2s)"
+   ]
   }
  ],
  "metadata": {
@@ -233,7 +368,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4-final"
+   "version": "3.8.3-final"
   },
   "next_doc": {
    "link": "matplotlib",
