--- a/m1-6-numpy-main/Workshop.ipynb
+++ b/m1-6-numpy-main/Workshop.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Steven Zajac-Descôteaux Workshop 6"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 1. What is the Average Height of US Presidents?\n",
     "\n",
     "Aggregates available in NumPy can be extremely useful for summarizing a set of values.\n",
